--- a/WebApp/wwwroot/Styles/highcontrast.scss
+++ b/WebApp/wwwroot/Styles/highcontrast.scss
@@ -59,4 +59,16 @@
             background-color: deeppink;
         }
     }
+
+    .user--icon--head {
+        background-color: darkred;
+    }
+
+    .user--icon--body {
+        background-color: darkred;
+    }
+
+    .user--details .item {
+        background-color: salmon;
+    }
 }
