--- a/WebApp/wwwroot/Styles/light.scss
+++ b/WebApp/wwwroot/Styles/light.scss
@@ -55,4 +55,16 @@
             background-color: aquamarine;
         }
     }
+
+    .user--icon--head {
+        background-color: gray;
+    }
+
+    .user--icon--body {
+        background-color: gray;
+    }
+
+    .user--details .item {
+        background: aliceblue;
+    }
 }
