--- a/WebApp/wwwroot/css/shared.css
+++ b/WebApp/wwwroot/css/shared.css
@@ -924,6 +924,8 @@ nav {
   display: flex;
   flex-direction: row;
   align-items: center;
+  justify-content: space-evenly;
+  padding: 20pt;
 }
 .account--edit--page--content .user--details--container .user--icon--container .user--icon {
   width: max-content;
@@ -935,24 +937,22 @@ nav {
 .account--edit--page--content .user--details--container .user--icon--container .user--icon .user--icon--head {
   width: 3.5vw;
   height: 5vh;
-  background: #111111;
   border-radius: 100%;
 }
 .account--edit--page--content .user--details--container .user--icon--container .user--icon .user--icon--body {
   width: 7.5vw;
   height: 9vh;
-  background: #111111;
   clip-path: polygon(20% 0%, 80% 0%, 100% 100%, 0% 100%);
   border-top-left-radius: 100px;
   border-top-right-radius: 100px;
   border-bottom-right-radius: 20px;
   border-bottom-left-radius: 20px;
 }
-.account--edit--page--content .user--details--container .user--icon--container .user--icon .user--account {
+.account--edit--page--content .user--details--container .user--icon--container .user--account {
   width: 100%;
   text-align: center;
-  background: #a1a1a1;
   margin: 0pt 10pt;
+  font-weight: bold;
 }
 .account--edit--page--content .user--details--container .user--details {
   display: block;
@@ -967,7 +967,6 @@ nav {
   overflow-wrap: break-word;
   margin: 10pt;
   padding: 10pt;
-  background: #a1a1a1;
   overflow: hidden;
 }
 .account--edit--page--content .user--details--container .user--details .item .title {
@@ -996,6 +995,10 @@ nav {
   border-color: #f1f1f1;
   border-image: initial;
   border-radius: 50pt;
+}
+.account--edit--page--content .user--account--edition .password--required--edition .text--message {
+  width: 100%;
+  min-height: fit-content;
 }
 .account--edit--page--content .user--account--edition .password--required--edition .item {
   width: 50%;
