--- a/WebApp/wwwroot/Styles/dark.scss
+++ b/WebApp/wwwroot/Styles/dark.scss
@@ -88,4 +88,17 @@
         box-shadow: inset 0 0px 5px 1px #00000082, 0 0px 3px 0px #00000082;
         border: 0;
     }
+
+
+    .user--icon--head {
+        background-color: #f1f1f1;
+    }
+
+    .user--icon--body {
+        background-color: #f1f1f1;
+    }
+
+    .user--details .item {
+        background: radial-gradient(black, transparent);
+    }
 }
