--- a/WebApp/wwwroot/css/dark.css
+++ b/WebApp/wwwroot/css/dark.css
@@ -58,3 +58,12 @@
   box-shadow: inset 0 0px 5px 1px #00000082, 0 0px 3px 0px #00000082;
   border: 0;
 }
+.dark-mode .user--icon--head {
+  background-color: #f1f1f1;
+}
+.dark-mode .user--icon--body {
+  background-color: #f1f1f1;
+}
+.dark-mode .user--details .item {
+  background: radial-gradient(black, transparent);
+}
