--- a/WebApp/wwwroot/css/shared.css
+++ b/WebApp/wwwroot/css/shared.css
@@ -926,6 +926,7 @@ nav {
   align-items: center;
   justify-content: space-evenly;
   padding: 20pt;
+  max-width: 500px;
 }
 .account--edit--page--content .user--details--container .user--icon--container .user--icon {
   width: max-content;
@@ -936,12 +937,16 @@ nav {
 }
 .account--edit--page--content .user--details--container .user--icon--container .user--icon .user--icon--head {
   width: 3.5vw;
+  max-width: 100px;
   height: 5vh;
+  max-height: 100px;
   border-radius: 100%;
 }
 .account--edit--page--content .user--details--container .user--icon--container .user--icon .user--icon--body {
   width: 7.5vw;
+  max-width: 200px;
   height: 9vh;
+  max-height: 170px;
   clip-path: polygon(20% 0%, 80% 0%, 100% 100%, 0% 100%);
   border-top-left-radius: 100px;
   border-top-right-radius: 100px;
@@ -966,7 +971,7 @@ nav {
   align-items: center;
   overflow-wrap: break-word;
   margin: 10pt;
-  padding: 10pt;
+  padding: 10pt 0;
   overflow: hidden;
 }
 .account--edit--page--content .user--details--container .user--details .item .title {
@@ -983,7 +988,7 @@ nav {
   display: flex;
   flex-direction: column;
   align-items: center;
-  width: 70vw;
+  width: 45vw;
 }
 .account--edit--page--content .user--account--edition .password--required--edition {
   margin-left: 5vw;
