--- a/WebApp/wwwroot/Styles/shared.scss
+++ b/WebApp/wwwroot/Styles/shared.scss
@@ -1181,6 +1181,7 @@ nav {
             .text--message {
                 width: 100%;
                 min-height: fit-content;
+                text-align: center;
             }
 
             .item {
